tests/ui/hygiene/arguments.stderr
error[E0412]: cannot find type `S` in this scope
  --> $DIR/arguments.rs:16:8
   |
LL |     m!(S, S);
   |        ^ not found in this scope
   |
help: you might be missing a type parameter
   |
LL |         pub(super) fn f<S>(_: $t) {}
   |                        +++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0412`.
